Small fix to spacing in repository header

--- a/ci/web/front/less/repository/header/repositoryHeader.less
+++ b/ci/web/front/less/repository/header/repositoryHeader.less
@@ -1,6 +1,6 @@
 div.repositoryHeader {
 	display: table-row;
-	height: 70px;
+	height: 75px;
 
 	.repositoryHeaderContainer {
 		display: table;
