--- a/ci/web/front/less/repository/header/url/repositoryUrlPanel.less
+++ b/ci/web/front/less/repository/header/url/repositoryUrlPanel.less
@@ -1,13 +1,13 @@
 div.repositoryUrlPanel {
 	display: table-row;
 
-	.relativePositionWrapper {	
+	.relativePositionWrapper {
 		position: relative;
 
 		.repositoryLinkImage {
 			display: inline-block;
 			position: absolute;
-			top: 5px;
+			top: 10px;
 			left: 0px;
 			height: 25px;
 		}
@@ -15,7 +15,7 @@ div.repositoryUrlPanel {
 		.repositoryUrl {
 			display: inline-block;
 			position: absolute;
-			top: 5px;
+			top: 10px;
 			left: 30px;
 			right: 20px;
 			padding: 4px;
